--- a/src/app/onil/pages/header/header.component.html
+++ b/src/app/onil/pages/header/header.component.html
@@ -1,1 +1,67 @@
-<p>header works!</p>
+<h2 class="mt-3">Lorem ipsum, dolor sit amet consectetur adipisicing elit. <br> Ad, beatae! Assumenda temporibus
+    perspiciatis.</h2>
+<br>
+<div class="container">
+    <div class="row justify-content-md-center">
+        <div class="col col-md-2">LOREM IPSUM</div>
+        <span>&#124;</span>
+        <div class="col-md-auto">LOREM IPSUM</div>
+        <span>&#124;</span>
+        <div class="col col-md-2">LOREM IPSUM</div>
+    </div>
+</div>
+
+<div class="row mt-3">
+    <div class="col-2">
+        <h4>Redecora la habitacion de tu bebe.</h4>
+        <button type="button" class="btn btn-outline-primary">Empezar</button>
+    </div>
+    <div class="col-2">
+        <div class="hovereffect">
+            <img src="assets/images/img_1.png" class=" d-inline-block rounded" alt="images">
+            <div class="text-over-img">
+                <small class="font-weight-bold">Alfombra de tigre <br> <span
+                        class="font-weight-normal">47.99€</span></small>
+            </div>
+            <div class="overlay">
+                <a class="info btn btn-outline-primary btn-sm" href="#">Comprar ahora</a>
+            </div>
+        </div>
+    </div>
+    <div class="col-2">
+        <div class="hovereffect">
+            <img src="assets/images/img_2.png" class=" d-inline-block rounded" alt="images">
+            <div class="text-over-img">
+                <small class="font-weight-bold">Lampara de noche Hanoi <br> <span
+                        class="font-weight-normal">52.99€</span></small>
+            </div>
+            <div class="overlay">
+                <a class="info btn btn-outline-primary btn-sm" href="#">Comprar ahora</a>
+            </div>
+        </div>
+    </div>
+    <div class="col-2">
+        <div class="hovereffect">
+            <img src="assets/images/img_3.png" class=" d-inline-block rounded" alt="images">
+            <div class="text-over-img">
+                <small class="font-weight-bold">Alfombra de Leon <br> <span
+                        class="font-weight-normal">60.99€</span></small>
+            </div>
+            <div class="overlay">
+                <a class="info btn btn-outline-primary btn-sm" href="#">Comprar ahora</a>
+            </div>
+        </div>
+    </div>
+    <div class="col-2">
+        <div class="hovereffect">
+            <img src="assets/images/img_4.png" class=" d-inline-block rounded" alt="images">
+            <div class="text-over-img">
+                <small class="font-weight-bold">Cesta de peluches<br> <span
+                        class="font-weight-normal">30.99€</span></small>
+            </div>
+            <div class="overlay">
+                <a class="info btn btn-outline-primary btn-sm" href="#">Comprar ahora</a>
+            </div>
+        </div>
+    </div>
+</div>
