--- a/src/app/onil/pages/header/header.component.html
+++ b/src/app/onil/pages/header/header.component.html
@@ -12,7 +12,7 @@
 </div>
 
 <div class="row mt-3">
-    <div class="col-2">
+    <div class="col-2 mt-5">
         <h4>Redecora la habitacion de tu bebe.</h4>
         <button type="button" class="btn btn-outline-primary">Empezar</button>
     </div>
@@ -63,5 +63,17 @@
                 <a class="info btn btn-outline-primary btn-sm" href="#">Comprar ahora</a>
             </div>
         </div>
+    </div>
+</div>
+
+<div class="row mt-5">
+    <div class="col-4">
+        <hr>
+    </div>
+    <div class="col-4">
+        <button type="button" class="btn btn-primary btn-lg btn-block">Comprar todos.</button>
+    </div>
+    <div class="col-4">
+        <hr>
     </div>
 </div>
