--- a/src/app/onil/pages/body/body.component.html
+++ b/src/app/onil/pages/body/body.component.html
@@ -1,1 +1,54 @@
-<p>body works!</p>
+<div class="container mt-5 ">
+    <div class="card-group">
+        <div class="card m-3">
+            <img src="assets/images/img_5.png" class="card-img rounded" alt="carousel">
+            <div class="centered">
+                <h4 class="text-white">Lorem ipsum dolor sit amet.</h4>
+                <button type="button" class="btn btn-outline-primary">Saber mas...</button>
+            </div>
+        </div>
+        <div class="card m-3">
+            <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
+                <ol class="carousel-indicators">
+                    <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
+                    <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
+                    <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
+                </ol>
+                <div class="carousel-inner">
+                    <div class="carousel-item active ">
+                        <video autoplay muted loop class="video" src="assets/video/gradient.mov"></video>
+                        <div class="carousel-caption d-none d-md-block">
+                            <img src="assets/images/img_6.png" alt="logo" class="mb-3">
+                            <p class="font-italic text-dark font-weight-bold"><q>Lorem ipsum dolor sit amet consectetur
+                                    adipisicing elit.</q></p>
+                        </div>
+                    </div>
+                    <div class="carousel-item ">
+                        <video autoplay muted loop class="video" src="assets/video/gradient.mov"></video>
+                        <div class="carousel-caption d-none d-md-block">
+                            <img src="assets/images/img_6.png" alt="logo" class="mb-3">
+                            <p class="font-italic text-dark font-weight-bold"><q>Lorem ipsum dolor sit amet consectetur
+                                    adipisicing elit.</q></p>
+                        </div>
+                    </div>
+                    <div class="carousel-item ">
+                        <video autoplay muted loop class="video" src="assets/video/gradient.mov"></video>
+                        <div class="carousel-caption d-none d-md-block">
+                            <img src="assets/images/img_6.png" alt="logo" class="mb-3">
+                            <p class="font-italic text-dark font-weight-bold"><q>Lorem ipsum dolor sit amet consectetur
+                                    adipisicing elit.</q></p>
+                        </div>
+                    </div>
+                </div>
+                <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Previous</span>
+                </a>
+                <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Next</span>
+                </a>
+            </div>
+        </div>
+    </div>
+</div>
