--- a/src/app/onil/pages/header/header.component.html
+++ b/src/app/onil/pages/header/header.component.html
@@ -12,11 +12,11 @@
 </div>
 
 <div class="row mt-3">
-    <div class="col-2 mt-5">
+    <div class="col-md-2 mt-5">
         <h4>Redecora la habitacion de tu bebe.</h4>
         <button type="button" class="btn btn-outline-primary">Empezar</button>
     </div>
-    <div class="col-2">
+    <div class="col-md-2">
         <div class="hovereffect">
             <img src="assets/images/img_1.png" class=" d-inline-block rounded" alt="images">
             <div class="text-over-img">
@@ -28,7 +28,7 @@
             </div>
         </div>
     </div>
-    <div class="col-2">
+    <div class="col-md-2">
         <div class="hovereffect">
             <img src="assets/images/img_2.png" class=" d-inline-block rounded" alt="images">
             <div class="text-over-img">
@@ -40,7 +40,7 @@
             </div>
         </div>
     </div>
-    <div class="col-2">
+    <div class="col-md-2">
         <div class="hovereffect">
             <img src="assets/images/img_3.png" class=" d-inline-block rounded" alt="images">
             <div class="text-over-img">
@@ -52,7 +52,7 @@
             </div>
         </div>
     </div>
-    <div class="col-2">
+    <div class="col-md-2">
         <div class="hovereffect">
             <img src="assets/images/img_4.png" class=" d-inline-block rounded" alt="images">
             <div class="text-over-img">
