--- a/src/app/onil/pages/header/header.component.html
+++ b/src/app/onil/pages/header/header.component.html
@@ -19,7 +19,7 @@
     <div class="col-md-2">
         <div class="hovereffect">
             <img src="assets/images/img_1.png" class=" d-inline-block rounded" alt="images">
-            <div class="text-over-img">
+            <div class="text-block ">
                 <small class="font-weight-bold">Alfombra de tigre <br> <span
                         class="font-weight-normal">47.99€</span></small>
             </div>
@@ -31,7 +31,8 @@
     <div class="col-md-2">
         <div class="hovereffect">
             <img src="assets/images/img_2.png" class=" d-inline-block rounded" alt="images">
-            <div class="text-over-img">
+
+            <div class="text-block ">
                 <small class="font-weight-bold">Lampara de noche Hanoi <br> <span
                         class="font-weight-normal">52.99€</span></small>
             </div>
@@ -43,7 +44,7 @@
     <div class="col-md-2">
         <div class="hovereffect">
             <img src="assets/images/img_3.png" class=" d-inline-block rounded" alt="images">
-            <div class="text-over-img">
+            <div class="text-block ">
                 <small class="font-weight-bold">Alfombra de Leon <br> <span
                         class="font-weight-normal">60.99€</span></small>
             </div>
@@ -55,7 +56,7 @@
     <div class="col-md-2">
         <div class="hovereffect">
             <img src="assets/images/img_4.png" class=" d-inline-block rounded" alt="images">
-            <div class="text-over-img">
+            <div class="text-block ">
                 <small class="font-weight-bold">Cesta de peluches<br> <span
                         class="font-weight-normal">30.99€</span></small>
             </div>
