--- a/src/app/onil/pages/header/header.component.css
+++ b/src/app/onil/pages/header/header.component.css
@@ -10,8 +10,8 @@ img {
 
 /* Hover effect on images */
 .hovereffect {
-    width: 100%;
-    height: 100%;
+    width: 180px;
+    height: 300px;
     float: left;
     overflow: hidden;
     position: relative;
@@ -101,4 +101,14 @@ img {
     padding-left: 20px;
     padding-right: 20px;
     line-height: 0.8em;
+}
+
+
+/* media query */
+
+@media only screen and (max-width: 600px){
+    .hovereffect{
+        width: 100%;
+        height: 100%;
+    }
 }
